--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,34 @@
             <version>2.29.0</version>
         </dependency>
 
-
     </dependencies>
+
+
+    <build>
+        <plugins>
+            <!-- Surefire plugin used to run tests in parallel -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+<!--                    <parallel>methods</parallel>-->
+<!--                    <forkMode>perthread</forkMode>-->
+<!--                    <threadCount>3</threadCount>-->
+                    <reuseForks>false</reuseForks>
+                    <argLine>-Duser.language=en</argLine>
+                    <argLine>-Xmx1024m</argLine>
+                    <argLine>-XX:MaxPermSize=256m</argLine>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <useFile>false</useFile>
+                    <includes>
+                        <include>C11_AllureReport.java</include>
+                    </includes>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
